--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"test_data_highIVcurve.txt\"\n",
-    "df = edl.get_data(filename)"
+    "df_high_current = edl.get_data(\"test_data/test_data_highIVcurve.txt\")\n",
+    "df_low_current = edl.get_data(\"test_data/test_data_lowIVcurve.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ns       time/s   <Ewe>/V        I/mA\n",
+      "0       0     0.100000  1.156833    3.866200\n",
+      "1       0     0.200000  1.168724    9.980078\n",
+      "2       0     0.300000  1.181798   12.527523\n",
+      "3       0     0.400000  1.193858    9.470584\n",
+      "4       0     0.500000  1.205394   13.037017\n",
+      "...    ..          ...       ...         ...\n",
+      "24615  18  2459.753538  1.486764  506.732640\n",
+      "24616  18  2459.853538  1.486773  509.280090\n",
+      "24617  18  2459.953538  1.486783  510.299070\n",
+      "24618  18  2460.053538  1.486794  510.299070\n",
+      "24619  18  2460.053738  1.486746  507.242130\n",
+      "\n",
+      "[24620 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_low_current)"
    ]
   },
   {
@@ -27,52 +57,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Ns       time/s   <Ewe>/V        I/mA\n",
-      "0       0     0.100000  1.445101   1511.4467\n",
-      "1       0     0.200000  1.511759   1512.4656\n",
-      "2       0     0.300000  1.514861   1510.4275\n",
-      "3       0     0.400000  1.516269   1522.1458\n",
-      "4       0     0.500000  1.517190   1514.5034\n",
-      "...    ..          ...       ...         ...\n",
-      "24941  18  2492.551737  2.198576  19515.2890\n",
-      "24942  18  2492.651737  2.198539  19509.6840\n",
-      "24943  18  2492.751737  2.198600  19518.3460\n",
-      "24944  18  2492.851737  2.198512  19518.3460\n",
-      "24945  18  2492.851937  2.198353  19511.7230\n",
-      "\n",
-      "[24946 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/karaferner/git/cmu-crafting-software-2024/04_FinalProject/cmu-edl/cmu_edl_initial.py:25: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  results = pd.concat([results,new_row],ignore_index=True )\n"
+      "  results = pd.concat([results,new_row],ignore_index=True)\n"
      ]
     }
    ],
    "source": [
-    "r = edl.get_pol_curve(df)\n",
+    "r = edl.get_pol_curve(df_high_current,low_current_data=df_low_current)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -103,98 +103,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.531177</td>\n",
-       "      <td>0.302065</td>\n",
+       "      <td>1.407514</td>\n",
+       "      <td>0.001833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.574150</td>\n",
-       "      <td>0.502560</td>\n",
+       "      <td>1.411183</td>\n",
+       "      <td>0.003310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.612785</td>\n",
-       "      <td>0.701780</td>\n",
+       "      <td>1.414629</td>\n",
+       "      <td>0.004248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.651418</td>\n",
-       "      <td>0.902051</td>\n",
+       "      <td>1.417447</td>\n",
+       "      <td>0.005511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.686344</td>\n",
-       "      <td>1.102270</td>\n",
+       "      <td>1.420034</td>\n",
+       "      <td>0.006347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.720401</td>\n",
-       "      <td>1.302642</td>\n",
+       "      <td>1.422524</td>\n",
+       "      <td>0.007600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1.753734</td>\n",
-       "      <td>1.501914</td>\n",
+       "      <td>1.424658</td>\n",
+       "      <td>0.008976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1.787123</td>\n",
-       "      <td>1.703101</td>\n",
+       "      <td>1.425063</td>\n",
+       "      <td>0.009200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1.820054</td>\n",
-       "      <td>1.902464</td>\n",
+       "      <td>1.427221</td>\n",
+       "      <td>0.010555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1.852182</td>\n",
-       "      <td>2.103183</td>\n",
+       "      <td>1.429119</td>\n",
+       "      <td>0.011636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>1.885059</td>\n",
-       "      <td>2.302506</td>\n",
+       "      <td>1.439636</td>\n",
+       "      <td>0.020796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>1.918139</td>\n",
-       "      <td>2.502653</td>\n",
+       "      <td>1.448914</td>\n",
+       "      <td>0.031954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>1.951333</td>\n",
-       "      <td>2.703352</td>\n",
+       "      <td>1.455645</td>\n",
+       "      <td>0.041166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>1.986239</td>\n",
-       "      <td>2.903357</td>\n",
+       "      <td>1.461994</td>\n",
+       "      <td>0.051845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2.021277</td>\n",
-       "      <td>3.102323</td>\n",
+       "      <td>1.467443</td>\n",
+       "      <td>0.061494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2.057233</td>\n",
-       "      <td>3.303042</td>\n",
+       "      <td>1.473122</td>\n",
+       "      <td>0.071857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2.100229</td>\n",
-       "      <td>3.503394</td>\n",
+       "      <td>1.477642</td>\n",
+       "      <td>0.081201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2.155009</td>\n",
-       "      <td>3.703969</td>\n",
+       "      <td>1.482310</td>\n",
+       "      <td>0.091839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>2.198519</td>\n",
-       "      <td>3.902895</td>\n",
+       "      <td>1.486762</td>\n",
+       "      <td>0.101571</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,28 +202,28 @@
       ],
       "text/plain": [
        "    voltage_avg  current_avg\n",
-       "0      1.531177     0.302065\n",
-       "1      1.574150     0.502560\n",
-       "2      1.612785     0.701780\n",
-       "3      1.651418     0.902051\n",
-       "4      1.686344     1.102270\n",
-       "5      1.720401     1.302642\n",
-       "6      1.753734     1.501914\n",
-       "7      1.787123     1.703101\n",
-       "8      1.820054     1.902464\n",
-       "9      1.852182     2.103183\n",
-       "10     1.885059     2.302506\n",
-       "11     1.918139     2.502653\n",
-       "12     1.951333     2.703352\n",
-       "13     1.986239     2.903357\n",
-       "14     2.021277     3.102323\n",
-       "15     2.057233     3.303042\n",
-       "16     2.100229     3.503394\n",
-       "17     2.155009     3.703969\n",
-       "18     2.198519     3.902895"
+       "0      1.407514     0.001833\n",
+       "1      1.411183     0.003310\n",
+       "2      1.414629     0.004248\n",
+       "3      1.417447     0.005511\n",
+       "4      1.420034     0.006347\n",
+       "5      1.422524     0.007600\n",
+       "6      1.424658     0.008976\n",
+       "7      1.425063     0.009200\n",
+       "8      1.427221     0.010555\n",
+       "9      1.429119     0.011636\n",
+       "10     1.439636     0.020796\n",
+       "11     1.448914     0.031954\n",
+       "12     1.455645     0.041166\n",
+       "13     1.461994     0.051845\n",
+       "14     1.467443     0.061494\n",
+       "15     1.473122     0.071857\n",
+       "16     1.477642     0.081201\n",
+       "17     1.482310     0.091839\n",
+       "18     1.486762     0.101571"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -242,23 +242,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-5943eb77278249f49c8fe1db99132c4b.vega-embed {\n",
+       "  #altair-viz-491551213f304a0993d02d93b0ce6817.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-5943eb77278249f49c8fe1db99132c4b.vega-embed details,\n",
-       "  #altair-viz-5943eb77278249f49c8fe1db99132c4b.vega-embed details summary {\n",
+       "  #altair-viz-491551213f304a0993d02d93b0ce6817.vega-embed details,\n",
+       "  #altair-viz-491551213f304a0993d02d93b0ce6817.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-5943eb77278249f49c8fe1db99132c4b\"></div>\n",
+       "<div id=\"altair-viz-491551213f304a0993d02d93b0ce6817\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-5943eb77278249f49c8fe1db99132c4b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-5943eb77278249f49c8fe1db99132c4b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-491551213f304a0993d02d93b0ce6817\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-491551213f304a0993d02d93b0ce6817\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -304,14 +304,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-f7847fdd9ed94d9c3e45e31526642dfa\"}, \"mark\": {\"type\": \"point\"}, \"encoding\": {\"x\": {\"field\": \"current_avg\", \"scale\": {\"domain\": [0, 3]}, \"type\": \"quantitative\"}, \"y\": {\"field\": \"voltage_avg\", \"scale\": {\"domain\": [1.38, 2.1]}, \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.17.0.json\", \"datasets\": {\"data-f7847fdd9ed94d9c3e45e31526642dfa\": [{\"voltage_avg\": 1.5311766600000003, \"current_avg\": 0.302065132}, {\"voltage_avg\": 1.57415024, \"current_avg\": 0.5025595520000001}, {\"voltage_avg\": 1.61278517, \"current_avg\": 0.701780222}, {\"voltage_avg\": 1.65141784, \"current_avg\": 0.9020505379999999}, {\"voltage_avg\": 1.6863444900000002, \"current_avg\": 1.1022698119999998}, {\"voltage_avg\": 1.7204008100000003, \"current_avg\": 1.302641932}, {\"voltage_avg\": 1.7537336, \"current_avg\": 1.5019135860000001}, {\"voltage_avg\": 1.7871230999999999, \"current_avg\": 1.703100978}, {\"voltage_avg\": 1.8200543200000001, \"current_avg\": 1.9024643959999998}, {\"voltage_avg\": 1.85218209, \"current_avg\": 2.10318294}, {\"voltage_avg\": 1.8850594, \"current_avg\": 2.30250552}, {\"voltage_avg\": 1.9181394400000003, \"current_avg\": 2.5026534399999996}, {\"voltage_avg\": 1.9513328299999997, \"current_avg\": 2.70335158}, {\"voltage_avg\": 1.98623941, \"current_avg\": 2.90335696}, {\"voltage_avg\": 2.0212771700000003, \"current_avg\": 3.10232302}, {\"voltage_avg\": 2.0572332799999997, \"current_avg\": 3.3030417}, {\"voltage_avg\": 2.1002285699999996, \"current_avg\": 3.5033935599999997}, {\"voltage_avg\": 2.1550085799999996, \"current_avg\": 3.70396944}, {\"voltage_avg\": 2.19851874, \"current_avg\": 3.9028947}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-69026e04d88ab55d1a460c31e8955a94\"}, \"mark\": {\"type\": \"point\"}, \"encoding\": {\"x\": {\"field\": \"current_avg\", \"scale\": {\"domain\": [0, 3]}, \"type\": \"quantitative\"}, \"y\": {\"field\": \"voltage_avg\", \"scale\": {\"domain\": [1.38, 2.1]}, \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.17.0.json\", \"datasets\": {\"data-69026e04d88ab55d1a460c31e8955a94\": [{\"voltage_avg\": 1.4075137300000002, \"current_avg\": 0.0018329790256000002}, {\"voltage_avg\": 1.41118341, \"current_avg\": 0.0033104993800000004}, {\"voltage_avg\": 1.41462917, \"current_avg\": 0.0042479612799999995}, {\"voltage_avg\": 1.41744652, \"current_avg\": 0.00551149588}, {\"voltage_avg\": 1.42003427, \"current_avg\": 0.00634705946}, {\"voltage_avg\": 1.42252395, \"current_avg\": 0.0076004046}, {\"voltage_avg\": 1.42465776, \"current_avg\": 0.008976026699999999}, {\"voltage_avg\": 1.42506346, \"current_avg\": 0.009200202639999999}, {\"voltage_avg\": 1.4272205599999999, \"current_avg\": 0.010555444940000002}, {\"voltage_avg\": 1.4291193200000003, \"current_avg\": 0.011635563880000001}, {\"voltage_avg\": 1.4396355499999998, \"current_avg\": 0.020796189200000002}, {\"voltage_avg\": 1.4489143000000002, \"current_avg\": 0.031954018}, {\"voltage_avg\": 1.4556451400000001, \"current_avg\": 0.0411655934}, {\"voltage_avg\": 1.46199385, \"current_avg\": 0.0518445}, {\"voltage_avg\": 1.4674431599999997, \"current_avg\": 0.06149423479999999}, {\"voltage_avg\": 1.4731221900000002, \"current_avg\": 0.07185725479999999}, {\"voltage_avg\": 1.47764244, \"current_avg\": 0.08120129899999999}, {\"voltage_avg\": 1.4823104399999998, \"current_avg\": 0.09183944880000001}, {\"voltage_avg\": 1.4867620000000001, \"current_avg\": 0.10157070579999998}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +323,13 @@
     "    \n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
