--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karaferner/git/cmu-crafting-software-2024/04_FinalProject/cmu-edl/cmu_edl_initial.py:18: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  return pd.read_csv(filename, sep=\"\\s+\")\n"
+     ]
+    }
+   ],
    "source": [
     "import cmu_edl_initial as edl\n",
     "import pandas as pd\n",
