--- a/test.ipynb
+++ b/test.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment Details:\n",
-      "Experiment Name: Experiment 1\n",
-      "Ir Loading: 0.1\n",
-      "Pt Loading: 1.2\n",
-      "Active Area: 5 cm^2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from experiment import Experiment\n",
     "\n",
     "exp = Experiment(\"Experiment 1\", 0.1, 1.2, 5)\n",
-    "exp.print_details()"
+    "exp.print_attributes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,354 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time/s</th>\n",
-       "      <th>Ewe/V</th>\n",
-       "      <th>I/mA</th>\n",
-       "      <th>cycle number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-04-21 06:23:43.365900</td>\n",
-       "      <td>1.829165</td>\n",
-       "      <td>10015.6176</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-04-21 07:51:49.458600</td>\n",
-       "      <td>1.828846</td>\n",
-       "      <td>10015.3538</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-04-21 08:59:02.052900</td>\n",
-       "      <td>1.834156</td>\n",
-       "      <td>10015.1241</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-04-21 10:03:46.696300</td>\n",
-       "      <td>1.835448</td>\n",
-       "      <td>10015.6944</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-04-21 11:10:49.267700</td>\n",
-       "      <td>1.83927</td>\n",
-       "      <td>10013.7663</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-04-21 12:21:06.015700</td>\n",
-       "      <td>1.837633</td>\n",
-       "      <td>10014.9756</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024-04-21 13:27:47.121100</td>\n",
-       "      <td>1.841525</td>\n",
-       "      <td>10015.4159</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2024-04-21 14:34:54.263500</td>\n",
-       "      <td>1.842655</td>\n",
-       "      <td>10015.4715</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024-04-21 15:42:02.178800</td>\n",
-       "      <td>1.843461</td>\n",
-       "      <td>10015.6794</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2024-04-21 16:49:09.274200</td>\n",
-       "      <td>1.845921</td>\n",
-       "      <td>10015.2512</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024-04-21 17:56:50.276700</td>\n",
-       "      <td>1.8462</td>\n",
-       "      <td>10015.0943</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024-04-21 19:03:57.408100</td>\n",
-       "      <td>1.848023</td>\n",
-       "      <td>10015.0133</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024-04-21 20:11:05.598500</td>\n",
-       "      <td>1.848952</td>\n",
-       "      <td>10013.4127</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2024-04-21 21:18:12.719800</td>\n",
-       "      <td>1.849779</td>\n",
-       "      <td>10015.1484</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024-04-21 22:24:17.511200</td>\n",
-       "      <td>1.851887</td>\n",
-       "      <td>10014.2632</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024-04-22 06:41:29.054700</td>\n",
-       "      <td>1.843017</td>\n",
-       "      <td>10015.2409</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024-04-22 07:45:52.527100</td>\n",
-       "      <td>1.847563</td>\n",
-       "      <td>10015.5811</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024-04-22 08:50:16.021400</td>\n",
-       "      <td>1.851432</td>\n",
-       "      <td>10016.1022</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024-04-22 09:54:40.659800</td>\n",
-       "      <td>1.853397</td>\n",
-       "      <td>10014.7316</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2024-04-22 10:59:04.092200</td>\n",
-       "      <td>1.855725</td>\n",
-       "      <td>10014.6378</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2024-04-22 12:03:49.476700</td>\n",
-       "      <td>1.856168</td>\n",
-       "      <td>10015.1784</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2024-04-22 13:08:13.116100</td>\n",
-       "      <td>1.857454</td>\n",
-       "      <td>10015.2325</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2024-04-22 14:12:36.620400</td>\n",
-       "      <td>1.859448</td>\n",
-       "      <td>10014.8961</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2024-04-22 15:17:00.261800</td>\n",
-       "      <td>1.860917</td>\n",
-       "      <td>10014.7027</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2024-04-22 16:21:23.700200</td>\n",
-       "      <td>1.863366</td>\n",
-       "      <td>10014.5477</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2024-04-22 17:26:37.339700</td>\n",
-       "      <td>1.863197</td>\n",
-       "      <td>10014.4624</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2024-04-22 18:31:00.970100</td>\n",
-       "      <td>1.865251</td>\n",
-       "      <td>10014.8641</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2024-04-22 19:35:24.470400</td>\n",
-       "      <td>1.866199</td>\n",
-       "      <td>10014.2237</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2024-04-22 20:39:47.950800</td>\n",
-       "      <td>1.867249</td>\n",
-       "      <td>10013.0177</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2024-04-22 21:44:11.375200</td>\n",
-       "      <td>1.867814</td>\n",
-       "      <td>10013.0111</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2024-04-23 06:42:33.327700</td>\n",
-       "      <td>1.94465</td>\n",
-       "      <td>10014.8872</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2024-04-23 07:46:57.146100</td>\n",
-       "      <td>1.954184</td>\n",
-       "      <td>10015.4284</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>2024-04-23 08:51:20.492400</td>\n",
-       "      <td>1.956076</td>\n",
-       "      <td>10015.3109</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024-04-23 09:55:43.826800</td>\n",
-       "      <td>1.961202</td>\n",
-       "      <td>10015.6104</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2024-04-23 11:00:07.127200</td>\n",
-       "      <td>1.962322</td>\n",
-       "      <td>10013.6269</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2024-04-23 12:04:51.890700</td>\n",
-       "      <td>1.968033</td>\n",
-       "      <td>10015.0881</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2024-04-23 13:09:15.217100</td>\n",
-       "      <td>1.975677</td>\n",
-       "      <td>10015.2472</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2024-04-23 14:13:38.778400</td>\n",
-       "      <td>1.976974</td>\n",
-       "      <td>10014.7673</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        time/s     Ewe/V        I/mA cycle number\n",
-       "0   2024-04-21 06:23:43.365900  1.829165  10015.6176          1.0\n",
-       "1   2024-04-21 07:51:49.458600  1.828846  10015.3538          1.0\n",
-       "2   2024-04-21 08:59:02.052900  1.834156  10015.1241          1.0\n",
-       "3   2024-04-21 10:03:46.696300  1.835448  10015.6944          1.0\n",
-       "4   2024-04-21 11:10:49.267700   1.83927  10013.7663          1.0\n",
-       "5   2024-04-21 12:21:06.015700  1.837633  10014.9756          1.0\n",
-       "6   2024-04-21 13:27:47.121100  1.841525  10015.4159          1.0\n",
-       "7   2024-04-21 14:34:54.263500  1.842655  10015.4715          1.0\n",
-       "8   2024-04-21 15:42:02.178800  1.843461  10015.6794          1.0\n",
-       "9   2024-04-21 16:49:09.274200  1.845921  10015.2512          1.0\n",
-       "10  2024-04-21 17:56:50.276700    1.8462  10015.0943          1.0\n",
-       "11  2024-04-21 19:03:57.408100  1.848023  10015.0133          1.0\n",
-       "12  2024-04-21 20:11:05.598500  1.848952  10013.4127          1.0\n",
-       "13  2024-04-21 21:18:12.719800  1.849779  10015.1484          1.0\n",
-       "14  2024-04-21 22:24:17.511200  1.851887  10014.2632          1.0\n",
-       "15  2024-04-22 06:41:29.054700  1.843017  10015.2409          1.0\n",
-       "16  2024-04-22 07:45:52.527100  1.847563  10015.5811          1.0\n",
-       "17  2024-04-22 08:50:16.021400  1.851432  10016.1022          1.0\n",
-       "18  2024-04-22 09:54:40.659800  1.853397  10014.7316          1.0\n",
-       "19  2024-04-22 10:59:04.092200  1.855725  10014.6378          1.0\n",
-       "20  2024-04-22 12:03:49.476700  1.856168  10015.1784          1.0\n",
-       "21  2024-04-22 13:08:13.116100  1.857454  10015.2325          1.0\n",
-       "22  2024-04-22 14:12:36.620400  1.859448  10014.8961          1.0\n",
-       "23  2024-04-22 15:17:00.261800  1.860917  10014.7027          1.0\n",
-       "24  2024-04-22 16:21:23.700200  1.863366  10014.5477          1.0\n",
-       "25  2024-04-22 17:26:37.339700  1.863197  10014.4624          1.0\n",
-       "26  2024-04-22 18:31:00.970100  1.865251  10014.8641          1.0\n",
-       "27  2024-04-22 19:35:24.470400  1.866199  10014.2237          1.0\n",
-       "28  2024-04-22 20:39:47.950800  1.867249  10013.0177          1.0\n",
-       "29  2024-04-22 21:44:11.375200  1.867814  10013.0111          1.0\n",
-       "30  2024-04-23 06:42:33.327700   1.94465  10014.8872          1.0\n",
-       "31  2024-04-23 07:46:57.146100  1.954184  10015.4284          1.0\n",
-       "32  2024-04-23 08:51:20.492400  1.956076  10015.3109          1.0\n",
-       "33  2024-04-23 09:55:43.826800  1.961202  10015.6104          1.0\n",
-       "34  2024-04-23 11:00:07.127200  1.962322  10013.6269          1.0\n",
-       "35  2024-04-23 12:04:51.890700  1.968033  10015.0881          1.0\n",
-       "36  2024-04-23 13:09:15.217100  1.975677  10015.2472          1.0\n",
-       "37  2024-04-23 14:13:38.778400  1.976974  10014.7673          1.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exp.durability.per_hour_current_hold"
    ]
